# MemRL

./: .gitignore  README.md  pyproject.toml  requirements-benchmarks.txt  requirements-dev.txt  requirements.txt  run_llb_trainonly_screen_local.sh
configs/: rl_bcb_config.yaml  rl_hle_config.yaml  rl_llb_config.yaml
docs/plans/: 2026-01-15-add-memory-wrapper.md  2026-01-16-bigcodebench-integration.md
memp/: __init__.py  __version__.py
memp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
memp/agent/: memp_agent.py
memp/bigcodebench_eval/: bcb_adapter.py
memp/configs/: config.py
memp/envs/: alfworld_env.py
memp/lifelongbench_eval/: memory_context.py
memp/mem0_core/: README.md  __init__.py  alfworld_bench.py  client.py  formatting.py  hle_bench.py  store.py
memp/providers/: llm.py
memp/run/: __init__.py  alfworld_rl_runner.py  bcb_runner.py  hle_runner.py  llb_rl_runner.py
memp/selfrag_core/: alfworld_bench.py  formatting.py  hle_bench.py  store.py  types.py
memp/service/: memory_service.py  retrievers.py  value_driven.py
memrl/: __version__.py
memrl/agent/: memp_agent.py
memrl/configs/: config.py
memrl/mem0_core/: README.md  __init__.py  alfworld_bench.py  client.py  config.py  hle_bench.py  types.py
memrl/providers/: llm.py
memrl/run/: alfworld_rl_runner.py  bcb_runner.py  hle_runner.py
memrl/selfrag_core/: README.md  __init__.py  alfworld_bench.py  client.py  config.py  hle_bench.py
memrl/service/: memory_service.py
openspec/changes/archive/2026-02-08-align-resume-cube-bindings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-align-resume-cube-bindings/specs/active-cube-alignment/: spec.md
openspec/specs/active-cube-alignment/: spec.md
requirements/: benchmarks.txt  dev.txt
run/: run_alfworld.py  run_bcb.py  run_hle.py  run_llb.py
tests/: test_active_cube_alignment_unittest.py  test_add_memories_q_init.py  test_add_memory_wrapper.py  test_bcb_alignment_unittest.py  test_bcb_prompt_alignment.py  test_bcb_tensorboard_logging.py  test_config_api_version_fields.py  test_llb_jsonl_trace.py  test_llb_prompt_alignment_and_sanitize.py  test_llb_sim_threshold_alignment.py  test_retrievers_compat_unittest.py  test_snapshot_dirs.py  test_success_coercion_unittest.py  test_trace_env_from_yaml.py
